--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hola Gustavo</h1>
     <h1>Suscríbete al canal</h1>
-    <h1>Aprende DevOps con La Tecnologia Avanaza</h1>
+    <h1>Aprende DevOps con La Tecnologia Avanza</h1>
     <button id="btnClick">Haz clic aquí</button>
     <p id="output"></p>
     <form id="contactForm">
